@@ -1,5 +1,6 @@
 v2.8.9   - Made printout of ACES file loaded always display full path to it.
 	 - Added Open/Save menus to Image Browser (Reel List).
+	 - Improved performance of drawing green cache line.
 
 v2.8.8   - Fixed some crashing and hanging bugs when playing
 	   backwards or scrubbing backwards.
